# sudolver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  sudoku.pri  sudoku.pro
src/: CMakeLists.txt  src.pro
src/console/: CMakeLists.txt  console.pro  io.cpp  io.h  main.cpp
src/gui/: CMakeLists.txt  FileReader.cpp  FileReader.h  GridModel.cpp  GridModel.h  GridView.cpp  GridView.h  MainWindow.cpp  MainWindow.h  gui.pro  main.cpp
src/lib/: CMakeLists.txt  types.hpp  validation.cpp  validation.hpp
src/logic/: BacktrackReasons.cpp  BacktrackReasons.h  CMakeLists.txt  ChangesChecker.cpp  ChangesChecker.h  FilledCellNoPossibilityConstraint.cpp  FilledCellNoPossibilityConstraint.h  HeuristicsConstraints.cpp  HeuristicsConstraints.h  HypothesisMaker.cpp  HypothesisMaker.h  IApplyable.h  IBacktrackReason.h  IBacktracker.h  IChangesChecker.h  ICombinationsRegistry.h  IHypothesisMaker.h  IPossibilitiesRegistry.h  IStateSaver.h  IStepper.h  IValidator.h  Registries.cpp  Registries.h  Solver.cpp  Solver.h  SolvingStepper.cpp  SolvingStepper.h  StateSaver.cpp  StateSaver.h  UniquePossibilityInCellHeuristic.cpp  UniquePossibilityInCellHeuristic.h  UniquePossibilityInElementHeuristic.cpp  UniquePossibilityInElementHeuristic.h  UniqueValueInElementConstraint.cpp  UniqueValueInElementConstraint.h  Validator.cpp  Validator.h  WholeDomainFiller.cpp  WholeDomainFiller.h  basic_static_data.h  (+8 more)
src/logic_test/: BacktrackReasonsTest.cpp  MockBacktrackReason.h  MockBacktracker.h  MockChangesChecker.h  MockCombinationsRegistry.h  MockPossibilitiesRegistry.h  MockStateSaver.h  config.h  (+6 more)
(+21 files in other folders)
